# component-sdl2

./: .gitignore  1.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SUMMARY.md  component-sdl2.sln  main.cpp  report.docx  vse-podderzhivaemye-css-psevdoklassy.md  vse-podderzhivaemye-css-stili.md  vse-vozmozhnye-sobytiya-dlya-otslezhivaniya.md
component-sdl2/: component-sdl2.vcxproj  component-sdl2.vcxproj.filters  main.cpp
component-sdl2/Button/: button.cpp  button.h
component-sdl2/Button/css/: button.css
component-sdl2/Checkbox/: Checkbox.cpp  Checkbox.h
component-sdl2/DialogAnswer/: DialogAnswer.cpp  DialogAnswer.h
component-sdl2/DialogWindow/: DialogWindow.cpp  DialogWindow.h
component-sdl2/FileDialog/: FileDialog.cpp  FileDialog.h
component-sdl2/FileDialog/FileDialogItem/: FileDialogItem.cpp  FileDialogItem.h
component-sdl2/FileDialog/FileDialogItem/css/: file-dialog-item.css
component-sdl2/FileDialog/FileDialogItems/: FileDialogItems.cpp  FileDialogItems.h
component-sdl2/FileDialog/css/: file-dialog.css
component-sdl2/Label/: Label.cpp  Label.h
component-sdl2/Label/css/: label.css
component-sdl2/MyComponent/: MyComponent.cpp  MyComponent.h
component-sdl2/MyWindowClass/: MyWindow.cpp  MyWindow.h
component-sdl2/RadioButton/: RadioButton.cpp  RadioButton.h
component-sdl2/SystemButton/: SystemButton.cpp  SystemButton.h
component-sdl2/css/: dialog-window.css  style-file.css  style.css  style1.css
component-sdl2/kit/: kit-enter-point.h  kit-main.cpp  kit-main.h
component-sdl2/kit/component/: component-header.h  component.cpp  component.h
component-sdl2/kit/component/animation/: animation.h  animation_variant.cpp
component-sdl2/kit/component/components/: components.cpp  components.h
component-sdl2/kit/component/navigator/: navigator.cpp  navigator.h
component-sdl2/kit/component/scroll/: scroll.cpp  scroll.h
component-sdl2/kit/event/: event.h
component-sdl2/kit/tools/color/: color.h
component-sdl2/kit/tools/css/: css-attributes.cpp  css-attributes.h  css.cpp  css.h  css_block.cpp  css_block.h  css_block_state.cpp  css_block_state.h  css_parse.cpp  css_parse.h
component-sdl2/kit/tools/font/: font.cpp  font.h  fonts.cpp  fonts.h
component-sdl2/kit/tools/image/: image.cpp  image.h
component-sdl2/kit/tools/sdl_gfx/: SDL2_gfxPrimitives.c
component-sdl2/kit/tools/text/: text.cpp  text.h  text_line.cpp  text_line.h
component-sdl2/kit/tools/utils/: utils.cpp  utils.h
component-sdl2/kit/window/: window.cpp  window.h
enc_temp_folder/bf09af870bb35f38997a28f1a405f25/: MyWindow.cpp
enc_temp_folder/e757969d2b743134339c5754395f7d6/: component.h
enc_temp_folder/e92ce178a2d563134f8e3d8893f49cd0/: button.cpp
lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  component_sdl2_cmake.sln  component_sdl2_cmake.vcxproj  component_sdl2_cmake.vcxproj.filters
report/: README.md  build.bat  readme.docx  report-c.docx  report.docx
report/ready/: ready.docx
report/scripts/: build.ps1
report/templates/: template.doc  template.docx
src/: kit-enter-point.h  kit-main.cpp  kit-main.h  kit.h
src/component/: component-header.h  component.cpp  component.h
src/component/animation/: animation_variant.h
src/component/components/: components.cpp  components.h
src/component/navigator/: navigator.cpp  navigator.h
src/component/scroll/: scroll.cpp  scroll.h
src/component/scroll/horizontal-scroll/: horizontal-scroll.cpp  horizontal-scroll.h  horizontal_scroll.cpp  horizontal_scroll.h
src/component/scroll/vertical-scroll/: vertical-scroll.cpp  vertical-scroll.h  vertical_scroll.cpp  vertical_scroll.h
src/event/: event.h
src/std_components/button/: button.cpp  button.h
src/std_components/button/css/: button.css
src/std_components/checkbox/: checkbox.cpp  checkbox.h
src/std_components/checkbox/css/: style.css
src/std_components/contextual_menu/: contextual_menu.cpp  contextual_menu.h
src/std_components/line_select/: line_select.cpp  line_select.h
src/std_components/select/: select.cpp  select.h  select_item.cpp  select_item.h
src/std_components/select/css/: style.css
src/std_components/table/: table.cpp  table.h  table_header.cpp  table_header.h  table_header_item.cpp  table_header_item.h  table_item.cpp  table_item.h  table_row.cpp  table_row.h
src/std_components/table/css/: style.css
src/std_components/tabs/: tabs.cpp  tabs.h
src/std_components/tabs/css/: style.css
src/std_windows/select_window/: select_window.cpp  select_window.h
src/std_windows/simple_window/: simple-window.cpp  simple-window.h
src/std_windows/simple_window/css/: style.css
src/tools/css/: css-attributes.cpp  css-attributes.h  css.cpp  css.h  css_block.cpp  css_block.h  css_block_state.cpp  css_block_state.h  css_parse.cpp  css_parse.h  css_parser.cpp  css_parser.h
src/tools/css/color/: color.cpp  color.h
src/tools/css/css_variant/: css_variant.cpp  css_variant.h
src/tools/css/utils/: css_utils.cpp  utils.h
src/tools/draw/: draw.cpp  draw.h
src/tools/font/: font.cpp  font.h
src/tools/font/font-find/: font-find.cpp  (+1 more)
src/tools/image/: image.cpp  image.h
src/tools/text/: text.cpp  text.h  text_line.cpp  text_line.h
src/tools/text2/: text.h  text2.cpp  text_line.cpp  text_line.h  word.cpp  word.h
src/tools/text3/: text_3.cpp  text_3.h  text_cursor.cpp  text_cursor.h  text_line.cpp  text_line.h
src/tools/text_extended/: text_align.h  text_extended.cpp  text_extended.h  text_line.cpp  text_line.h
src/tools/texture/: texture.cpp  texture.h
src/tools/utils/: utils.cpp  utils.h
src/window/: window.cpp  window.h
styles/std_components/button/: style.css
styles/std_components/checkbox/: style.css
styles/std_components/contextual_menu/: style.css
styles/std_components/line_select/: style.css
styles/std_components/select/: style.css
styles/std_components/table/: style.css
styles/std_windows/select_window/: style.css
styles/std_windows/simple_window/: style.css
test/: CMakeLists.txt  test-component.cpp  test-extended-point.cpp  test-utils.cpp
(+36 files in other folders)
